--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,10 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    background-color: #f4f4f4;
 }
 
 header {
@@ -17,6 +19,7 @@ header {
     background-color: #00112D;
     color: white;
     padding: 15px;
+    margin: 0;
     text-align: center;
     width: 100%;
 }
@@ -67,5 +70,36 @@ img {
 }
 
 .button:hover {
-    background-color: #005bb5;
+    background-color: #e20707;
+}
+
+label {
+    font-weight: bold;
+    margin: 10px 0 5px;
+}
+
+input, textarea {
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.contact-form {
+    margin: 20px;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    width: 90%;
+    max-width: 800px;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
