--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 header.banner {
-    background-color: #00112D;
+    background-color: #333;
     color: white;
     padding: 15px;
     text-align: center;
