--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ body {
     padding: 0;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+}
 header.banner {
     background-color: #333;
     color: white;
@@ -42,14 +46,14 @@ header.banner {
 .button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #00142F;
+    background-color: #333;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
     margin: 10px;
 }
 .button:hover {
-    background-color: #005bb5;
+    background-color: #ff0000;
 }
 
 footer {
