--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
-  background: #ffffff;
+  background: #000000;
 }
 
 img {
@@ -137,11 +137,11 @@ header.banner {
 =================================*/
 .content-container {
   max-width: 900px;
-  margin: 20px auto;
+  margin: 30px auto;
   padding: 25px;
   background: #ffffff;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.15);
+  box-shadow: 0 0 10px rgba(225,255,255,0.15);
   text-align: center;
 }
 
@@ -152,6 +152,7 @@ section {
   background: #f5f5f5;
   border-radius: 10px;
   border-left: 5px solid #ff0000;
+  box-shadow: 0 0 10px rgba(255,255,255,0.1);
 }
 
 /* ===============================
